--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css"/>
 <body>
 <header class="header">
-  
+
 <nav class="container navigation">
         <a lang="en" class="logo" href="./index.html"
             ><span class="accent">Web</span>Studio</a>
@@ -22,32 +22,32 @@
             <li class="item"><a class="link" href="">Контакти</a></li>
         </ul>
         <ul class="auth-nav">
-          <li class="item">
+            <li class="item">
             <a
-              class="auth-nav-link icon-envelope"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+                class="auth-nav-link icon-envelope"
+                href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
             >
-          </li>
-          <li class="item">
+            </li>
+            <li class="item">
             <a class="auth-nav-link icon-smartfone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            >+38 096 111 11 11</a
             >
-          </li>
+            </li>
         </ul>
         </nav>
         
 </header>
 <main>
     <!--Hero-->
-    <section class="hero">
+    <section class="hero overlay">
     <div class="container hero-main">
                 <h1 class="hero-title">Ефективні рішення<br>для вашого бізнесу</h1>
         <button type="button" class="button-primary-main">Замовити послугу</button>
         </div>
     </section>
     <!--Feacher-list-->
-    <section class="feachers section">
+        <section class="feachers section">
         <div class="container ">
             <h2 class="visually-hidden">Наші особливості</h2>
     <ul class="feachers-list">
@@ -154,7 +154,7 @@
                     </a></li>
                 </ul>
                 </div>
-              </li>
+                    </li>
         <li class="item">
             
             <img class="command-section-image" src="./images/uldesignersquooshed.jpg" alt="ul designer" width="270">
@@ -180,6 +180,19 @@
         </li>
     </ul>
     </div>
+</section>
+<section class="clients section">
+    <div class="container">
+    <h2 class="clients-title">Постійні клієнти</h2>
+    <ul class="clients-list">
+        <li class="item"></li>
+        <li class="item"></li>
+        <li class="item"></li>
+        <li class="item"></li>
+        <li class="item"></li>
+        <li class="item"></li>
+    </ul>
+</div>
 </section>
 </main>
 <footer class="footer section">
