--- a/porfolio.html
+++ b/porfolio.html
@@ -32,15 +32,19 @@
         </ul>
         <ul class="auth-nav">
           <li class="item">
-            <a
-              class="auth-nav-link icon-envelope"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="auth-nav-link" href="mailto:info@devstudio.com">
+              <svg class="icon-envelope" width="16px" height="12px">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a class="auth-nav-link icon-smartfone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="auth-nav-link icon-smartfone" href="tel:+380961111111">
+              <svg class="icon-envelope" width="10px" height="16px">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -69,11 +73,12 @@
           </ul>
           <ul class="benefits-list">
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/tekhnokriak.jpg"
                   alt="технопарк"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title">Технокряк</h2>
@@ -82,11 +87,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/poster.jpg"
                   alt="постер баскетбольного матчу"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title">
@@ -97,11 +103,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/restaurant.jpg"
                   alt="ресторан морської їжі"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title">
@@ -112,11 +119,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/project-prime.jpg"
                   alt="Маркетинг першого проекту"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title" lang="en">
@@ -127,11 +135,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/project-boxes.jpg"
                   alt="Додаток проєкту контейнери"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title">
@@ -142,11 +151,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/inspiration.jpg"
                   alt="Сайт натхнення немає кордонів"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title" lang="en">
@@ -157,11 +167,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/limited-edition.jpg"
                   alt="Дизайн обмеженого видання"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title">
@@ -172,11 +183,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/project-lab.jpg"
                   alt="Маркетинг проєкту ЛАБ"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title">
@@ -187,11 +199,12 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="portfolio-link">
                 <img
                   src="./images/growing-business.jpg"
                   alt="Додаток зростаючий бізнес"
                   width="370"
+                  class="img"
                 />
                 <div class="benefits-card">
                   <h2 class="benefits-list-title" lang="en">
@@ -206,35 +219,55 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a lang="en" class="footer-logo" href="/index.html"
-          ><span class="accent">Web</span>Studio</a
-        >
-        <address>
-          <ul class="address-list">
-            <li class="item">
-              <a
-                class="address-link"
-                href="https://goo.gl/maps/PjR9KqvbA5ErwzuY9"
-                target="_blank"
-                rel="noopener noreferrer"
-                >м. Київ, п-кт Лесі Українки, 26</a
-              >
-            </li>
-            <li class="item">
-              <a class="auth-nav-link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="item">
-              <a class="auth-nav-link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-    </footer>
+    <div class="container footer-block">
+        <div class="address">
+    <a lang="en" class="footer-logo" href="/index.html"
+            ><span class="accent">Web</span>Studio</a>
+    <address>
+            <ul class="address-list">
+        <li class="item">
+            <a class="address-link" href="https://goo.gl/maps/PjR9KqvbA5ErwzuY9" target="_blank" rel="noopener noreferrer">м. Київ, п-кт Лесі Українки, 26</a>
+        </li>
+        <li class="item">
+            <a class="auth-nav-link" href="mailto:info@example.com">info@example.com</a>
+        </li>
+        <li class="item">   
+            <a class="auth-nav-link" href="tel:+380991111111">+38 099 111 11 11</a>
+        </li>
+    </ul>
+    </div>
+    </address>
+    <div class="social-block">
+        <h2 class="visually-hidden">Соцмережі</h2>
+        <h3 class="social-title">Приєднуйтесь</h3>
+    <ul class="social-networks-list">
+                    <li class="social-item">
+                        <a href="" class="social-link">
+                        <svg class="icon-command-footer" width="20px" height="20px">
+                <use href="./images/sprite.svg#icon-instagram"></use></svg>   
+                        </a>
+                    </li>
+                    <li class="social-item"> <a href="" class="social-link">
+                        <svg class="icon-command-footer" width="20px" height="20px">
+                <use href="./images/sprite.svg#icon-twitter"></use></svg>     
+                        </a>
+                </li>
+                    <li class="social-item"> <a href="" class="social-link">
+                        <svg class="icon-command-footer" width="20px" height="20px">
+                <use href="./images/sprite.svg#icon-facebook"></use></svg>     
+                        </a>
+                </li>
+                    <li class="social-item"> <a href="" class="social-link">
+                        <svg class="icon-command-footer" width="20px" height="20px">
+                <use href="./images/sprite.svg#icon-linkedin"></use></svg>    
+                        </a>
+                </li>
+                </ul>
+    
+    </div>
+
+    </div>
+</footer>
   </body>
 </html>
 <!--  -->
