--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             >
           </li>
           <li class="item">
-            <a class="auth-nav-link icon-smartfone" href="tel:+380961111111">
-              <svg class="icon-envelope" width="10px" height="16px">
+            <a class="auth-nav-link" href="tel:+380961111111">
+              <svg class="icon-smartphone" width="10px" height="16px">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -114,7 +114,7 @@
                 <ul class="social-networks-list">
                     <li class="social-item">
                         <a href="" class="command-link">
-                        <svg class="icon-command-instagram" width="20px" height="20px">
+                        <svg class="icon-command" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-instagram"></use></svg>   
                         </a>
                     </li>
@@ -146,7 +146,7 @@
                 <ul class="social-networks-list">
                     <li class="social-item">
                         <a href="" class="command-link">
-                        <svg class="icon-command-instagram" width="20px" height="20px">
+                        <svg class="icon-command" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-instagram"></use></svg>   
                         </a>
                     </li>
@@ -178,7 +178,7 @@
                 <ul class="social-networks-list">
                     <li class="social-item">
                         <a href="" class="command-link">
-                        <svg class="icon-command-instagram" width="20px" height="20px">
+                        <svg class="icon-command" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-instagram"></use></svg>   
                         </a>
                     </li>
@@ -209,7 +209,7 @@
                 <ul class="social-networks-list">
                     <li class="social-item">
                         <a href="" class="command-link">
-                        <svg class="icon-command-instagram" width="20px" height="20px">
+                        <svg class="icon-command" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-instagram"></use></svg>   
                         </a>
                     </li>
