--- a/porfolio.html
+++ b/porfolio.html
@@ -51,7 +51,7 @@
       </nav>
     </header>
     <main>
-      <section class="portfolio-section section">
+      <section class="portfolio section">
         <div class="container">
           <h1 class="visually-hidden">Чим ми займаємось</h1>
           <ul class="buttons-list">
