--- a/porfolio.html
+++ b/porfolio.html
@@ -219,55 +219,71 @@
       </section>
     </main>
     <footer class="footer">
-    <div class="container footer-block">
+      <div class="container footer-block">
         <div class="address">
-    <a lang="en" class="footer-logo" href="/index.html"
-            ><span class="accent">Web</span>Studio</a>
-    <address>
+          <a lang="en" class="footer-logo" href="/index.html"
+            ><span class="accent">Web</span>Studio</a
+          >
+          <address>
             <ul class="address-list">
-        <li class="item">
-            <a class="address-link" href="https://goo.gl/maps/PjR9KqvbA5ErwzuY9" target="_blank" rel="noopener noreferrer">м. Київ, п-кт Лесі Українки, 26</a>
-        </li>
-        <li class="item">
-            <a class="auth-nav-link" href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li class="item">   
-            <a class="auth-nav-link" href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-    </ul>
-    </div>
-    </address>
-    <div class="social-block">
-        <h2 class="visually-hidden">Соцмережі</h2>
-        <h3 class="social-title">Приєднуйтесь</h3>
-    <ul class="social-networks-list">
-                    <li class="social-item">
-                        <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
-                <use href="./images/sprite.svg#icon-instagram"></use></svg>   
-                        </a>
-                    </li>
-                    <li class="social-item"> <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
-                <use href="./images/sprite.svg#icon-twitter"></use></svg>     
-                        </a>
-                </li>
-                    <li class="social-item"> <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
-                <use href="./images/sprite.svg#icon-facebook"></use></svg>     
-                        </a>
-                </li>
-                    <li class="social-item"> <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
-                <use href="./images/sprite.svg#icon-linkedin"></use></svg>    
-                        </a>
-                </li>
-                </ul>
-    
-    </div>
-
-    </div>
-</footer>
+              <li class="item">
+                <a
+                  class="address-link"
+                  href="https://goo.gl/maps/PjR9KqvbA5ErwzuY9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, п-кт Лесі Українки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a class="auth-nav-link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item">
+                <a class="auth-nav-link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-block">
+          <h2 class="visually-hidden">Соцмережі</h2>
+          <h3 class="social-title">Приєднуйтесь</h3>
+          <ul class="social-networks-list">
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="icon-command-footer" width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="icon-command-footer" width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="icon-command-footer" width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="icon-command-footer" width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 <!--  -->
