--- a/index.html
+++ b/index.html
@@ -281,22 +281,22 @@
     <ul class="social-networks-list">
                     <li class="social-item">
                         <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
+                        <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-instagram"></use></svg>   
                         </a>
                     </li>
                     <li class="social-item"> <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
+                        <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-twitter"></use></svg>     
                         </a>
                 </li>
                     <li class="social-item"> <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
+                        <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-facebook"></use></svg>     
                         </a>
                 </li>
                     <li class="social-item"> <a href="" class="social-link">
-                        <svg class="icon-command-footer" width="20px" height="20px">
+                        <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-linkedin"></use></svg>    
                         </a>
                 </li>
