--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
               </svg></li>
             </ul>
     <ul class="feachers-list">
-    <li class="item icon-detailing"> 
+    <li class="item"> 
     <h3 class="feachers-list-title">увага до деталей</h3>
     <p class="feachers-list-text">Ідейні висновки та початок щоденної роботи для формування позиції.</p>
     </li>
-    <li class="item icon-timing">
+    <li class="item">
     <h3 class="feachers-list-title">пунктуальність</h3>
         <p class="feachers-list-text">Завдання організації, в особливості ж рамки та місце навчання кадрів тягне за собою.</p>
     </li>
-    <li class="item icon-planning">
+    <li class="item">
     <h3 class="feachers-list-title">планування</h3>
     <p class="feachers-list-text">Також консультація з ініціативною частиною значно обумовлює.</p>
     </li>
-    <li class="item icon-technologies">
+    <li class="item">
     <h3 class="feachers-list-title">сучасні технології</h3>
     <p class="feachers-list-text">Сутність цих проблем настільки очевидна, що реалізація планових завдань.</p>
     </li>
