--- a/porfolio.html
+++ b/porfolio.html
@@ -249,8 +249,7 @@
           </address>
         </div>
         <div class="social-block">
-          <h2 class="visually-hidden">Соцмережі</h2>
-          <h3 class="social-title">Приєднуйтесь</h3>
+          <p class="social-text">Приєднуйтесь</p>
           <ul class="social-networks-list">
             <li class="social-item">
               <a href="" class="social-link">
