--- a/porfolio.html
+++ b/porfolio.html
@@ -73,18 +73,31 @@
           </ul>
           <ul class="benefits-list">
             <li class="item">
+              <!-- <div class="benefits-link"> -->
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/tekhnokriak.jpg"
-                  alt="технопарк"
-                  width="370"
-                  class="img"
-                />
+                <!--<div class="benefits-article">-->
+                <div class="benefits-thumb">
+                  <img
+                    src="./images/tekhnokriak.jpg"
+                    alt="технопарк"
+                    width="370"
+                    class="img"
+                  />
+                  <!-- <div class="benefits-hover-text"> -->
+                  <p class="benefits-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу і сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію, чи приватну особу.
+                  </p>
+                  <!-- </div> -->
+                </div>
+                <!-- </div> -->
                 <div class="benefits-card">
                   <h2 class="benefits-list-title">Технокряк</h2>
                   <p class="benefits-list-text">Веб-сайт</p>
                 </div>
               </a>
+              <!-- </div> -->
             </li>
             <li class="item">
               <a href="" class="portfolio-link">
