thumbs images worklist

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <div class="container">
     <h2 class="work-list-title">Чим ми займаємось</h2>
     <ul class="list">
-        <li class="item"><img src="./images/machinessquooshed.jpg" alt="розробка програмного забезпечення" width="370" class="img" /></li>
-        <li class="item"><img src="./images/stylessqooshed.jpg" alt="тестування мобільного додатку" width="370" class="img" /></li>
-        <li class="item"><img src="./images/designsquooshed.jpg" alt="робота із палітрою кольорів" width="370" class="img" /></li>
+        <li class="item"><div class="work-list-thumb"><img src="./images/machinessquooshed.jpg" alt="розробка програмного забезпечення" width="370" class="img" /><p class="work-thumb-text">десктопні додатки</p></div></li>
+        <li class="item"><div class="work-list-thumb"><img src="./images/stylessqooshed.jpg" alt="тестування мобільного додатку" width="370" class="img" /><p class="work-thumb-text">мобільні додатки</p></div></li>
+        <li class="item"><div class="work-list-thumb"><img src="./images/designsquooshed.jpg" alt="робота із палітрою кольорів" width="370" class="img" /><p class="work-thumb-text">дизайнерські рішення</p></div></li>
     </ul>
     </div>    
 </section>
